Syncing local development progress with master after .git folder got blown away somehow.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=vinconomy
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://SkullyNAS:3307/vinconomy
+spring.datasource.url=jdbc:mysql://localhost:3307/vinconomy
 spring.datasource.username=root
-spring.datasource.password=Thesims2
+spring.datasource.password=changeme
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 server.error.include-message=always
