Accept shop name, description, and owner as part of the update payload for a given shop.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=${VINCONOMY_DB_PASS:changeme}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 server.error.include-message=always
-server.port=${SPRING_SERVER_PORT}
+server.port=${SPRING_SERVER_PORT:80}
