Project prep for general user
* Added README
* Customization of dockerfiles via env added
* Externalized port exposing
* Added templates for scripts (bash and powershell)

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Powershell Scripts in the root project catalog for customized project builds  ###
+/custom_*.ps1
+
+### Bash Scripts in the root project catalog for customized project builds ###
+/custom_*.sh
