--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,7 +1,7 @@
 FROM mysql:8.0
 
 # Create database and user automatically
-ENV MYSQL_ROOT_PASSWORD=<root_pwd_here>
-ENV MYSQL_DATABASE=<dbname_here>
-ENV MYSQL_USER=<usr_here>
-ENV MYSQL_PASSWORD=<pwd_here>
+ENV MYSQL_ROOT_PASSWORD=$VINCONOMY_DB_ROOT_PASS
+ENV MYSQL_DATABASE=$VINCONOMY_DB_NAME
+ENV MYSQL_USER=$VINCONOMY_DB_USR
+ENV MYSQL_PASSWORD=$VINCONOMY_DB_PASS
