--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,17 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "<external_server_port>:8080"
+      - $VINCONOMY_SERVER_DOCKER_PORT_PAIR
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://vinconomy_db:3306/server_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: <uname_here>
-      SPRING_DATASOURCE_PASSWORD: <pwd_here>
+      SPRING_DATASOURCE_USERNAME: $VINCONOMY_DB_USR
+      SPRING_DATASOURCE_PASSWORD: $VINCONOMY_DB_PASS
+      SPRING_SERVER_PORT: $VINCONOMY_INTERNAL_SERVER_PORT
       # Optional: customize JVM or Spring profiles
       JAVA_OPTS: "-Xms512m -Xmx1024m"
     depends_on:
       - vinconomy_db
-    restart: always
+    restart: on-failure:3
 
   vinconomy_db:
     extends:
