--- a/mysql/docker-compose.db.yml
+++ b/mysql/docker-compose.db.yml
@@ -6,9 +6,9 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: vinconomy_db
-    restart: always
+    restart: on-failure:3
     ports:
-      - "<external_db_port>:3306"
+      - $VINCONOMY_DB_DOCKER_PORT_PAIR
     volumes:
       - mysql_data:/var/lib/mysql
 
